 509.	[func]		Add support for write of zone files on shutdown.

 508.	[func]		dns_message_parse() can now do a best-effort
			attempt, which should allow dig to print more invalid
			messages.

 507.	[func]		New functions dns_zone_flush(), dns_zt_flushanddetach()
			and dns_view_flushanddetach().

 506.	[func]		Do not fail to start on errors in zone files.

 505.	[bug]		nsupdate was printing "unknown result code". [RT #373]

 504.	[bug]		The zone was not being marked as dirty when updated via
			IXFR.

 503.	[bug]		dumptime was not being set along with
			DNS_ZONEFLG_NEEDDUMP.

 502.	[func]		On a SERVFAIL reply, DiG will now try the next server
			in the list, unless the +fail option is specified.

 501.	[bug]		Incorrect port numbers were being displayed by
			nslookup.  [RT #352]

 500.   [func]		Nearly useless +details option removed from DiG.

 499.	[func]		In DiG, specifying a class with -c or type with -t
			changes command-line parsing so that classes and
			types are only recognized if following -c or -t.
			This allows hosts with the same name as a class or
			type to be looked up.

 498.	[doc]		There is now a man page for "dig" 
			in doc/man/bin/dig.1.

 497.	[bug]		The error messages printed when an IP match list
			contained a network address with a nonzero host
			part where not sufficiently detailed. [RT #365]

 496.	[bug]		named didn't sanity check numeric parameters [RT #361]

 495.	[bug]		nsupdate was unable to handle large records [RT #368]

 494.	[func]		Do not cache NXDOMAIN responses for SOA queries.

 493.	[func]		Return non-cachable (ttl = 0) NXDOMAIN responses
			for SOA queries.  This makes it easier to locate
			the containing zone without polluting intermediate
			caches.

 492.	[bug]		attempting to reload a zone caused the server fail
			to shutdown cleanly. [RT #360]

 491.	[bug]		nsupdate would segfault when sending certain
			prerequisites with empty RDATA. [RT #356]

 490.	[func]		When a slave/stub zone has not yet successfully